# LootBagger

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/workspace/: file.rs
lootbaggerd/: Cargo.toml
lootbaggerd/src/: main.rs
lootcli/: Cargo.toml
lootcli/src/: main.rs
lootwatcher/: Cargo.toml
lootwatcher/src/: main.rs
