[package]
name = "lootwatcher"
version = "0.1.0"
authors = ["Ferocity <christian.fries123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
clap = "3.0.0-beta.2"
log = "0.4"
simple_logger = "1.11"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["json"] }
bytes = "0.4"